Remove "overflow: hidden" to fix the missing asset editor bar

--- a/styles/main.less
+++ b/styles/main.less
@@ -55,9 +55,12 @@ html .themed {
 		.columnizer-cols2 { }
 	
 	.columnizer-col, .columnizer-col2, .columnizer-col3, .columnizer-col4, .columnizer-col5 {margin-right:0; margin-left: 0;}
-	.columnizer-cols1 .columnizer-col {width: 960px; margin-top:5px; margin-bottom:5px; float:left; overflow:hidden;}
-	.columnizer-cols2 .columnizer-col {width: 470px; margin-top:5px; margin-bottom:5px; float:left; overflow:hidden;}
-	.columnizer-cols3 .columnizer-col {width: 306px; margin-top:5px; margin-bottom:5px; float:left; overflow:hidden;}
+	// .columnizer-cols1 .columnizer-col {width: 960px; margin-top:5px; margin-bottom:5px; float:left; overflow:hidden;}
+	// .columnizer-cols2 .columnizer-col {width: 470px; margin-top:5px; margin-bottom:5px; float:left; overflow:hidden;}
+	// .columnizer-cols3 .columnizer-col {width: 306px; margin-top:5px; margin-bottom:5px; float:left; overflow:hidden;}
+	.columnizer-cols1 .columnizer-col {width: 960px; margin-top:5px; margin-bottom:5px; float:left;}
+	.columnizer-cols2 .columnizer-col {width: 470px; margin-top:5px; margin-bottom:5px; float:left;}
+	.columnizer-cols3 .columnizer-col {width: 306px; margin-top:5px; margin-bottom:5px; float:left;}
 	.columnizer-row { margin-bottom: 0em; width:960px; margin:0px auto; padding-bottom:22px; overflow:auto;}
 
 	.columnizer-cols2 .columnizer-col.first { margin-right: 20px;}
